[package]
name = "walleth"
version = "0.1.0"
authors = ["mikesposito"]
license-file = "LICENSE"
readme="README.md"
description = "A (WIP) Rust library for easily create, manage, use and protect Ethereum accounts."
edition = "2021"
repository = "https://github.com/mikesposito/walleth/"
keywords = [
	"ethereum",
	"wallet",
	"library",
	"crypto",
	"signing",
]

[dependencies]
bincode = "1.3.3"
bip32 = "~0.5.1"
chacha20poly1305 = "~0.9.0"
ecdsa = { version = "0.16.8", features = ["arithmetic", "signing"] }
hex = "~0.4.3"
hmac = "~0.12.1"
k256 = "0.13.1"
pbkdf2 = "~0.12.2"
rand_core = { version = "~0.6.0", features = ["std"] }
secp256k1 = "~0.27.0"
serde = { version = "1.0.188", features = ["derive"] }
sha3 = "~0.10.8"
