[package]
name = "walleth"
version = "0.1.0"
authors = ["mikesposito"]
license-file = "LICENSE"
readme = "README.md"
description = "A (WIP) Rust library for easily create, manage, use and protect Ethereum accounts."
edition = "2021"
repository = "https://github.com/mikesposito/walleth/"
keywords = ["ethereum", "wallet", "library", "crypto", "signing"]

[workspace]
members = [
	"crates/identity",
	"crates/keychain",
	"crates/keychain/hdkey",
	"crates/utils",
	"crates/vault",
	"crates/vault/safe",
]

[dependencies.identity]
path = "crates/identity"
package = "walleth-identity"

[dependencies.vault]
path = "crates/vault"
package = "walleth-vault"

[dependencies.safe]
path = "crates/vault/safe"
package = "walleth-vault-safe"

[dependencies.utils]
path = "crates/utils"
package = "walleth-utils"

[dependencies.keychain]
path = "crates/keychain"
package = "walleth-keychain"

[dependencies.hdkey]
path = "crates/keychain/hdkey"
package = "walleth-keychain-hdkey"
