[package]
name = "walleth-utils"
version = "0.0.0"
authors = ["mikesposito"]
readme="README.md"
edition = "2021"
repository = "https://github.com/mikesposito/walleth/crates/walleth-identity"
keywords = [
	"ethereum",
	"wallet",
	"library",
	"crypto",
	"signing",
]

[dependencies.hex]
version = "~0.4.3"

[dependencies.sha3]
version = "~0.10.8"

[dependencies.serde]
version = "~1.0.188"
features = ["derive"]