[package]
name = "walleth-vault"
version = "0.0.0"
authors = ["mikesposito"]
readme = "README.md"
edition = "2021"
repository = "https://github.com/mikesposito/walleth/crates/vault"
keywords = ["ethereum", "wallet", "library", "crypto", "signing"]

[dependencies.identity]
path = "../identity"
package = "walleth-identity"

[dependencies.safe]
path = "./safe"
package = "walleth-vault-safe"

[dependencies.secp256k1]
version = "~0.27.0"

[dependencies.serde]
version = "~1.0.188"
features = ["derive"]