[package]
name = "walleth-vault-safe"
version = "0.0.0"
authors = ["mikesposito"]
readme="README.md"
edition = "2021"
repository = "https://github.com/mikesposito/walleth/crates/vault/safe"
keywords = [
	"ethereum",
	"wallet",
	"library",
	"crypto",
	"signing",
]

[dependencies.bincode]
version = "~1.3.3"

[dependencies.chacha20poly1305]
version = "~0.9.0"

[dependencies.hmac]
version = "~0.12.1"

[dependencies.pbkdf2]
version = "~0.12.2"

[dependencies.rand_core]
version = "~0.6.4"

[dependencies.serde]
version = "~1.0.188"
features = ["derive"]

[dependencies.sha3]
version = "~0.10.8"